--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,11 @@
-<h2>Login</h2>
-<form method="POST" action="/login">
-  <input name="email" type="email" placeholder="Email" required />
-  <input name="password" type="password" placeholder="Password" required />
-  <button type="submit">Login</button>
-</form>
-<a href="/signup">Signup</a>
+<link rel="stylesheet" href="/home.css">
+
+<div class="auth-box">
+  <h2>Login</h2>
+  <form method="POST" action="/login">
+    <input name="email" type="email" placeholder="Email" required />
+    <input name="password" type="password" placeholder="Password" required />
+    <button type="submit">Login</button>
+  </form>
+  <a href="/signup">Create account</a>
+</div>
