--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,8 +1,12 @@
-<h2>Signup</h2>
-<form method="POST" action="/signup">
-  <input name="name" placeholder="Name" required />
-  <input name="email" type="email" placeholder="Email" required />
-  <input name="password" type="password" placeholder="Password" required />
-  <button type="submit">Signup</button>
-</form>
-<a href="/login">Login</a>
+<link rel="stylesheet" href="/home.css">
+
+<div class="auth-box">
+  <h2>Signup</h2>
+  <form method="POST" action="/signup">
+    <input name="name" placeholder="Name" required />
+    <input name="email" type="email" placeholder="Email" required />
+    <input name="password" type="password" placeholder="Password" required />
+    <button type="submit">Signup</button>
+  </form>
+  <a href="/login">Already have an account?</a>
+</div>
